force-app/main/default/objects/SummaryofObjectsCleaned__c/SummaryofObjectsCleaned__c.object-meta.xml
<CustomObject>
    <label>Summary of Objects Cleaned</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Summary of Objects Cleaned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summary of Objects Cleaned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>