force-app/main/default/objects/SummaryofObjectsCleaned__c/fields/CountofRecordsDeleted__c.field-meta.xml
<CustomField>
    <fullName>CountofRecordsDeleted__c</fullName>
    <label>Count of Records Deleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>