force-app/main/default/objects/SummaryofObjectsCleaned__c/fields/IntegrationObjectType__c.field-meta.xml
<CustomField>
    <fullName>IntegrationObjectType__c</fullName>
    <label>Integration Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>