force-app/main/default/objects/SummaryofObjectsCleaned__c/fields/IntegrationRecords__c.field-meta.xml
<CustomField>
    <fullName>IntegrationRecords__c</fullName>
    <label>Integration Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>