force-app/main/default/objects/SummaryofObjectsCleaned__c/fields/MonthsDataGoesBack__c.field-meta.xml
<CustomField>
    <fullName>MonthsDataGoesBack__c</fullName>
    <label>Months Data Goes Back</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>