force-app/main/default/objects/SummaryofObjectsCleaned__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>SummaryofObjectsCleaned__c</referenceTo>
    <relationshipLabel>Summary of Objects Cleaned</relationshipLabel>
    <relationshipName>Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>