force-app/main/default/objects/SummaryofObjectsCleaned__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <formula>CASE(WEEKDAY(DATE(Year__c, 1, 1)),
2, (DATE(Year__c, 1, 1) - 0) + ((WeekinYear__c - 1) * 7),
3, (DATE(Year__c, 1, 1) - 1) + ((WeekinYear__c - 1) * 7),
4, (DATE(Year__c, 1, 1) - 2) + ((WeekinYear__c - 1) * 7),
5, (DATE(Year__c, 1, 1) - 3) + ((WeekinYear__c - 1) * 7),
6, (DATE(Year__c, 1, 1) + 3) + ((WeekinYear__c - 1) * 7),
7, (DATE(Year__c, 1, 1) + 2) + ((WeekinYear__c - 1) * 7),
1, (DATE(Year__c, 1, 1) + 1) + ((WeekinYear__c - 1) * 7),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>