force-app/main/default/objects/SummaryofObjectsCleaned__c/fields/SummaryCount__c.field-meta.xml
<CustomField>
    <fullName>SummaryCount__c</fullName>
    <label>Summary Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>