force-app/main/default/objects/SummaryofObjectsCleaned__c/fields/WeekinYear__c.field-meta.xml
<CustomField>
    <fullName>WeekinYear__c</fullName>
    <label>Week in Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>