force-app/main/default/objects/SummaryofObjectsCleaned__c/listViews/All_Child_Batches.listView-meta.xml
<ListView>
    <fullName>All_Child_Batches</fullName>
    <columns>NAME</columns>
    <columns>OperatingCompany__c</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>SummaryCount__c</columns>
    <columns>IntegrationRecords__c</columns>
    <columns>IntegrationObjectType__c</columns>
    <columns>MonthsDataGoesBack__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Child Batches</label>
</ListView>