force-app/main/default/objects/SummaryofObjectsCleaned__c/listViews/All_Parent_Batches.listView-meta.xml
<ListView>
    <fullName>All_Parent_Batches</fullName>
    <columns>NAME</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>CountofRecordsDeleted__c</columns>
    <columns>MonthsDataGoesBack__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Parent Batches</label>
</ListView>